<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="containers">Containers</string>
    <string name="stack">Stack</string>
    <string name="all">All</string>
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <string name="start_stack">Start Stack</string>
    <string name="stop_stack">Stop Stack</string>
    <string name="services">Services</string>
    <string name="stack_example">Stack: example</string>
    <string name="tip_long_press_download">Tip: Long‑press a folder or tap ⋮ to download</string>
    <string name="action_download">Download</string>
    <string name="action_details">Details</string>
    <string name="action_calculate_size">Calculate size</string>
    <string name="calculating_total_size">Calculating total size…</string>
    <string name="action_terminal">Open Terminal</string>
    <string name="title_start_terminal">Start Terminal Session</string>
    <string name="action_start">Start</string>
    <string name="terminal_closed">Terminal session closed</string>
</resources>
